Revision history for Perl module Array::Diff

0.09 2019-05-10 NEILB
    - Set minimum Perl version in metadata. PR from MANWAR.

0.08 2019-05-08 NEILB
    - First non-developer release since switching to Dist::Zilla

0.07_03 2019-05-08 NEILB
    - Added Array::Compare to SEE ALSO
    - Added List::Compare to SEE ALSO
    - Really just making another developer release, as PAUSE and then
      CPAN Testers had issues, so previous dev releases didn't get much
      testing.

0.07_02 2019-05-07 NEILB
    - Added a bunch of entries to SEE ALSO.

0.07_01 2019-05-06 NEILB
    - Added version dependency for Algorithm::Diff in Array/Diff.pm
    - Switched to Dist::Zilla

0.07 2010-10-08T08:59:12+09:00
     - oops, depends Algorithm::Diff 1.19 again ;) (RT #61967)

0.06 2010-10-08T08:48:01+09:00
     - depends Algorithm::Diff 0.19 (RT #61967)

0.05002 2009-05-12T11:54:26+09:00
     - upgrade copyright and license statement in document (Thanks to Peter Pentchev)

0.05001 2009-05-11T10:39:47+09:00
     - upgrade a document. (Thanks to Peter Pentchev)

0.05 2008-10-23T11:05:53+09:00
     - added Algorithm::Diff::XS support

0.04 2006-09-02T13:14:13+09:00
     - added count method that returns diff count

0.03 2006-05-24T10:46:50+09:00
     - fixed a diff bug.

0.02 2006-04-04T17:42:18+09:00
     - fixes no_plan => 1 in 004_diff.t
     - no code changes

0.01 2006-04-04T17:16:43+09:00
     - original version; created by ExtUtils::ModuleMaker 0.44