@@ -2,6 +2,7 @@ Revision history for Perl module Array::Diff
 
 0.09 2019-05-10 NEILB
     - Set minimum Perl version in metadata. PR from MANWAR.
+    - Clarified in the doc that the arrays must be sorted. RT#39184
 
 0.08 2019-05-08 NEILB
     - First non-developer release since switching to Dist::Zilla
